# shitlord-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.gradle.kts  build.rs  gradle.properties  settings.gradle.kts
src/: actor.rs  application.rs  fpscalculator.rs  gamepad.rs  main.rs  maths.rs  random.rs  renderer.rs  state.rs
src/actor/: beato.rs
src/application/: gamepad.rs  keyboard.rs  timehelper.rs
src/application/gamepad/: deadzone.rs  state.rs  stick.rs
src/application/keyboard/: key.rs
src/gamepad/: axis.rs  button.rs  state.rs  stick.rs
src/maths/: extent.rs  rectangle.rs  vector2.rs
src/nativeInterop/cinterop/: SDL2.def  SDL2_image.def
src/nativeMain/kotlin/: Application.kt  GamePad.kt  LittleGuy.kt  Main.kt  Renderer.kt  Vector2f.kt
src/nativeMain/kotlin/maths/: Vec2f.kt
src/nativeMain/kotlin/state/: GameState.kt  SplashState.kt  State.kt
src/random/: drand48.rs  java.rs
src/renderer/: blendmode.rs  colour.rs  flip.rs  texturehnd.rs
src/state/: beatoburnerstate.rs  gamestate.rs  splashstate.rs
